--- a/oncoFinder2/templates/website/bt_report.html
+++ b/oncoFinder2/templates/website/bt_report.html
@@ -163,12 +163,12 @@
  </div><!--  end of gene tab-content -->
  
 <hr/>
-<h3>Notable genes</h3>
+<!--  <h3>Notable genes</h3>
 <hr/>
 <div>
 <h4>Embryonic genes</h4>
  <!-- Notable GENE Nav tabs -->
-         <ul class="nav nav-tabs" role="tablist">
+<!--         <ul class="nav nav-tabs" role="tablist">
            {%for gene in lEmbryonicGenes%}
            <li role="presentation" {%if forloop.counter == 1 %}class="active"{%endif%}><a href="#{{gene}}_tab" aria-controls="home1" role="tab" data-toggle="tab">{{gene}}</a></li>
            {%endfor%}
@@ -187,10 +187,10 @@
     {%endfor%}
    
    </div> <!--  end of tab panel -->
-<hr/>   
+<!--<hr/>   
 <h4>Adult genes</h4>
  <!-- Notable GENE Nav tabs -->
-         <ul class="nav nav-tabs" role="tablist">
+<!--         <ul class="nav nav-tabs" role="tablist">
            {%for gene in lAdultGenes%}
            <li role="presentation" {%if forloop.counter == 1 %}class="active"{%endif%}><a href="#{{gene}}_tab" aria-controls="home1" role="tab" data-toggle="tab">{{gene}}</a></li>
            {%endfor%}
@@ -209,7 +209,7 @@
     {%endfor%}
    
    </div> <!--  end of tab panel -->
-</div> <!-- end of Notable genes -->
+<!--</div> <!-- end of Notable genes -->
          
           
 
