--- a/oncoFinder2/templates/database/pathway_list.html
+++ b/oncoFinder2/templates/database/pathway_list.html
@@ -14,14 +14,18 @@
         <button type="button" class="btn btn-primary human kegg"   onClick="location.href='/db/pathways/human/kegg/'">KEGG</button>
         <button type="button" class="btn btn-primary human kegg_adjusted"   onClick="location.href='/db/pathways/human/kegg_adjusted/'">KEGG adj</button>
         <button type="button" class="btn btn-primary human nci"   onClick="location.href='/db/pathways/human/nci/'">NCI</button>
-        <button type="button" class="btn btn-primary human nci"   onClick="location.href='/db/pathways/human/biocarta/'">Biocarta</button>
+        <button type="button" class="btn btn-primary human biocarta"   onClick="location.href='/db/pathways/human/biocarta/'">Biocarta</button>
     </div>
     
-    <span style="font-size:14px; margin-left:50px;">Mouse: </span><div class="btn-group btn-group-xs">
+    <span style="font-size:14px; margin-left:10px;">Mouse: </span><div class="btn-group btn-group-xs">
         <button type="button" class="btn btn-primary mouse primary_old" onClick="location.href='/db/pathways/mouse/primary_old/'" >Primary old</button>
         <button type="button" class="btn btn-primary mouse primary_new"   onClick="location.href='/db/pathways/mouse/primary_new/'">Primary new</button>
         <button type="button" class="btn btn-primary mouse metabolism"  onClick="location.href='/db/pathways/mouse/metabolism/'" >Metabolism</button>
         <button type="button" class="btn btn-primary mouse cytoskeleton"  onClick="location.href='/db/pathways/mouse/cytoskeleton/'" >Cytoskeleton</button>
+        <button type="button" class="btn btn-primary mouse kegg"   onClick="location.href='/db/pathways/mouse/kegg/'">KEGG</button>
+        <button type="button" class="btn btn-primary mouse kegg_adjusted"   onClick="location.href='/db/pathways/mouse/kegg_adjusted/'">KEGG adj</button>
+        <button type="button" class="btn btn-primary mouse nci"   onClick="location.href='/db/pathways/mouse/nci/'">NCI</button>
+        <button type="button" class="btn btn-primary mouse biocarta"   onClick="location.href='/db/pathways/mouse/biocarta/'">Biocarta</button>
         
                                                </div>
      </div>  
