--- a/oncoFinder2/templates/website/bt_report.html
+++ b/oncoFinder2/templates/website/bt_report.html
@@ -190,7 +190,7 @@
 
 <!-- -------------------- GENE VENN  -->
 <br/>
-<h3>Significantly up- and downregulated genes</h3>
+<h3>Gene level comparison</h3>
 <br/>
 <!-- PAthway Nav tabs -->
          <ul class="nav nav-tabs" role="tablist">
@@ -232,7 +232,7 @@
        </td>
        <td>
        <div id="venn_gene-ESvsASCvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
-       Down regulated pathways
+       Significantly downregulated genes
        </td>
       </tr>
     </table>        
