--- a/oncoFinder2/templates/website/bt_report.html
+++ b/oncoFinder2/templates/website/bt_report.html
@@ -91,18 +91,18 @@
           <hr/>
           <!-- GENE Nav tabs -->
          <ul class="nav nav-tabs" role="tablist">
-         <li role="presentation" class="active"><a href="#EPL_vs_ABC_tab" aria-controls="home1" role="tab" data-toggle="tab">EPL vs ABC</a></li>
-         <li role="presentation" ><a href="#EPL_vs_AEC_tab" aria-controls="home" role="tab" data-toggle="tab">EPL vs AEC</a></li>
-         <li role="presentation"><a href="#EPL_vs_ANC_tab" aria-controls="profile" role="tab" data-toggle="tab">EPL vs ANC</a></li>
-         <li role="presentation"><a href="#EPL_vs_ASC_tab" aria-controls="messages" role="tab" data-toggle="tab">EPL vs ASC</a></li>
-         <li role="presentation"><a href="#EPL_vs_CCL_tab" aria-controls="settings" role="tab" data-toggle="tab">EPL vs CCL</a></li>
-         <li role="presentation"><a href="#EPL_vs_ES_tab" aria-controls="settings" role="tab" data-toggle="tab">EPL vs ES</a></li>
+         <li role="presentation" class="active"><a href="#EPL_vs_ABC_tab" aria-controls="home1" role="tab" data-toggle="tab">ABC vs EPL</a></li>
+         <li role="presentation" ><a href="#EPL_vs_AEC_tab" aria-controls="home" role="tab" data-toggle="tab">AEC vs EPL</a></li>
+         <li role="presentation"><a href="#EPL_vs_ANC_tab" aria-controls="profile" role="tab" data-toggle="tab">ANC vs EPL</a></li>
+         <li role="presentation"><a href="#EPL_vs_ASC_tab" aria-controls="messages" role="tab" data-toggle="tab">ASC vs EPL</a></li>
+         <li role="presentation"><a href="#EPL_vs_CCL_tab" aria-controls="settings" role="tab" data-toggle="tab">CCL vs EPL</a></li>
+         <li role="presentation"><a href="#EPL_vs_ES_tab" aria-controls="settings" role="tab" data-toggle="tab">ES vs EPL</a></li>
          </ul>
             <!-- GENE Tab panes -->
   <div class="tab-content">
    <div role="tabpanel" class="tab-pane fade in active" id="EPL_vs_ABC_tab">   
    <div id="EPL_vs_ABC" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"><span>Loading plot...</span></div>
-   <h4>Table 1. EPL vs ABC</h4>
+   <h4>Table 1. ABC vs EPL</h4>
       <table id="tbl-EPL_vs_ABC" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -116,7 +116,7 @@
    </div>
    <div role="tabpanel" class="tab-pane fade " id="EPL_vs_AEC_tab">   
    <div id="EPL_vs_AEC" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"><span>Loading plot...</span></div>
-   <h4>Table 2. EPL vs AEC</h4>
+   <h4>Table 2. AEC vs EPL</h4>
       <table id="tbl-EPL_vs_AEC" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -130,7 +130,7 @@
    </div>
    <div role="tabpanel" class="tab-pane fade " id="EPL_vs_ANC_tab">   
    <div id="EPL_vs_ANC" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"><span>Loading plot...</span></div>
-   <h4>Table 3. EPL vs ANC</h4>
+   <h4>Table 3. ANC vs EPL</h4>
       <table id="tbl-EPL_vs_ANC" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -144,7 +144,7 @@
    </div>
    <div role="tabpanel" class="tab-pane fade " id="EPL_vs_ASC_tab">   
    <div id="EPL_vs_ASC" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"><span>Loading plot...</span></div>
-   <h4>Table 4. EPL vs ASC</h4>
+   <h4>Table 4. ASC vs EPL</h4>
       <table id="tbl-EPL_vs_ASC" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -158,7 +158,7 @@
    </div>
    <div role="tabpanel" class="tab-pane fade " id="EPL_vs_CCL_tab">   
    <div id="EPL_vs_CCL" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"><span>Loading plot...</span></div>
-   <h4>Table 4. EPL vs CCL</h4>
+   <h4>Table 4. CCL vs EPL</h4>
       <table id="tbl-EPL_vs_CCL" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -172,7 +172,7 @@
    </div>
    <div role="tabpanel" class="tab-pane fade " id="EPL_vs_ES_tab">   
    <div id="EPL_vs_ES" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"><span>Loading plot...</span></div>
-   <h4>Table 6. EPL vs ES</h4>
+   <h4>Table 6. ES vs EPL</h4>
       <table id="tbl-EPL_vs_ES" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
