add color scale for paths

--- a/oncoFinder2/templates/document/ajax_pathway_detail.html
+++ b/oncoFinder2/templates/document/ajax_pathway_detail.html
@@ -91,6 +91,8 @@ AMCF = {{pathway.amcf}}
 	<a target="_blank" href='/media/pathway.svg?path={{pathway.name}}&r={{rand}}' >	
     <img src='/media/pathway.svg?path={{pathway.name}}&r={{rand}}' style="width:100%"/>
     </a>
+    
+    <img src='/media/path_scale.png?path={{pathway.name}}&r={{rand}}' style="width:100%"/>
 
 		
 </div>
